[gd_scene load_steps=7 format=3 uid="uid://t7was25fot5o"]

[ext_resource type="Script" path="res://src/mailbox/mailbox.gd" id="1_bocon"]
[ext_resource type="Texture2D" uid="uid://b7v4kujysqj4j" path="res://assets/mailbox.png" id="1_wulbu"]
[ext_resource type="FontFile" uid="uid://bwitkp7grmtju" path="res://assets/VCR_OSD_MONO_1.001.ttf" id="3_am2uf"]

[sub_resource type="Animation" id="Animation_xi7yc"]
resource_name = "mailbox_full"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ekd5"]
_data = {
"mailbox_full": SubResource("Animation_xi7yc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5hrtd"]
size = Vector2(140, 80)

[node name="Mailbox" type="Area2D"]
script = ExtResource("1_bocon")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_wulbu")
hframes = 3
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5ekd5")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5hrtd")

[node name="DepositedLettersIndicator" type="Label" parent="."]
texture_filter = 1
offset_left = -70.0
offset_top = -82.0
offset_right = 42.0
offset_bottom = -36.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_am2uf")
theme_override_font_sizes/font_size = 32
text = "0/5"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
